sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:12: error: not found: value inverse
			inverse=true
                        ^